--- a/requirements.txt
+++ b/requirements.txt
@@ -1,13 +1,18 @@
+aiohttp==3.8.4
+aiosignal==1.3.1
 alembic==1.9.4
 aniso8601==9.0.1
+anitopy==2.1.1
 APScheduler==3.10.0
 asttokens==2.0.8
 async-generator==1.10
+async-timeout==4.0.2
 attrs==22.1.0
 backcall==0.2.0
 backports.shutil-get-terminal-size==1.0.0
 beautifulsoup4==4.11.1
 better-exceptions==0.3.3
+Brotli==1.0.9
 bs4==0.0.1
 cacheout==0.14.1
 cachetools==5.3.0
@@ -16,47 +21,55 @@ cffi==1.15.1
 charset-normalizer==2.1.1
 click==8.1.3
 cn2an==0.5.17
-colorama==0.4.4
-colored==1.3.93
+colorama==0.4.6
+colored==1.4.4
 cryptography==39.0.1
 cssselect==1.1.0
-DBUtils==3.0.2
 dateparser==1.1.4
+DBUtils==3.0.2
 decorator==5.1.1
+docopt==0.6.2
 executing==1.1.0
-Flask==2.2.3
-Flask-Login==0.6.2
 fast-bencode==1.1.3
-flask-compress==1.13
+feapder==1.8.5
+Flask==2.2.3
+Flask-Compress==1.13
+Flask-Login==0.6.2
 flask-restx==1.0.6
 flask-sock==0.6.0
-func_timeout==4.3.5
-greenlet==1.1.3.post0
+frozenlist==1.3.3
+func-timeout==4.3.5
+greenlet==2.0.2
 h11==0.12.0
 humanize==4.4.0
 icalendar==5.0.4
 idna==3.3
 influxdb==5.3.1
-itsdangerous==2.1.2
+ipython==8.14.0
 iso639==0.1.4
+itsdangerous==2.1.2
 jedi==0.18.1
 Jinja2==3.1.2
 jsonpath==0.82
 jsonschema==4.16.0
 loguru==0.6.0
-lxml==4.9.1
+lxml==4.9.0
 Mako==1.2.3
 MarkupSafe==2.1.1
 matplotlib-inline==0.1.6
 msgpack==1.0.4
+multidict==6.0.4
 openai==0.27.2
 outcome==1.2.0
+packaging==23.1
 parse==1.19.0
 parsel==1.6.0
 parso==0.8.3
 pexpect==4.8.0
 pickleshare==0.7.5
-pillow==9.5.0
+Pillow==9.5.0
+playwright==1.35.0
+PlexAPI==4.14.0
 proces==0.1.2
 prompt-toolkit==3.0.31
 psutil==5.9.4
@@ -64,6 +77,7 @@ ptyprocess==0.7.0
 pure-eval==0.2.2
 pycparser==2.21
 pycryptodome==3.15.0
+pyee==9.0.4
 Pygments==2.13.0
 PyJWT==2.6.0
 pymongo==4.2.0
@@ -75,10 +89,11 @@ pyrsistent==0.18.1
 PySocks==1.7.1
 python-dateutil==2.8.2
 python-dotenv==0.20.0
-python_hosts==1.0.3
+python-hosts==1.0.3
 pytz==2022.2.1
 pytz-deprecation-shim==0.1.0.post0
 PyVirtualDisplay==3.0
+qbittorrent-api==2023.6.50
 redis==3.5.3
 redis-py-cluster==2.1.3
 regex==2022.9.13
@@ -86,17 +101,20 @@ requests==2.28.1
 ruamel.yaml==0.17.21
 ruamel.yaml.clib==0.2.7
 selenium==4.4.3
+simple-websocket==0.10.1
 six==1.16.0
-slack-sdk==3.19.5
+slack-bolt==1.18.0
+slack-sdk==3.21.3
 sniffio==1.2.0
 sortedcontainers==2.4.0
 soupsieve==2.3.2.post1
 SQLAlchemy==2.0.4
-stack-data==0.5.1
 srt==3.5.2
-terminal-layout==2.1.2
+stack-data==0.5.1
+terminal-layout==3.0.0
 tqdm==4.64.0
 traitlets==5.4.0
+transmission-rpc==4.3.0
 trio==0.21.0
 trio-websocket==0.9.2
 typing_extensions==4.3.0
@@ -111,4 +129,6 @@ webdriver-manager==3.8.5
 websockets==10.3
 Werkzeug==2.2.3
 wsproto==1.2.0
+yarg==0.1.9
+yarl==1.9.2
 zhconv==1.4.3
